--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Imcapplication">
         <activity
+            android:name=".ResultActivity"
+            android:exported="true"
+            android:label="@string/title_activity_result"
+            android:theme="@style/Theme.Imcapplication.NoActionBar"></activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
